--- a/app/globals.css
+++ b/app/globals.css
@@ -99,21 +99,23 @@
 
 /* QuillEditor custom styles */
 .list-item {
-  @apply text-base leading-relaxed;
+  @apply text-base leading-relaxed text-white;
 }
 
 .list-item ul,
 .list-item ol {
-  @apply pl-5;
+  @apply pl-5 text-white;
   margin-top: 0.5em;
   margin-bottom: 1em;
 }
 
 .list-item ul li,
 .list-item ol li {
-  @apply mb-2;
+  @apply mb-2 text-white;
   position: relative;
+  text-decoration: #d00;
 }
+
 
 .list-item ul li::before {
   content: "•";
@@ -147,6 +149,7 @@
   margin-top: 1em;
   margin-bottom: 0.5em;
   font-weight: bold;
+  color: white !important;
 }
 .blogcontent{
 color: white !important;
@@ -174,6 +177,13 @@ color: white !important;
 
 .list-item h6 {
   @apply text-sm;
+}
+
+.list-item p {
+  color: white !important;
+}
+.list-item span {
+  color: white !important;
 }
 
 /* Nested list styling */
