--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,6 @@
   display: none; /* Chrome, Safari */
 }
 
-
 @layer base {
   /* Light theme variables */
   :root {
@@ -108,6 +107,9 @@
 }
 .logo-size {
   font-size: 38px;
+}
+.head-size {
+  font-size: 45px;
 }
 
 .ql-align-justify {
